data/derived/sp14/progs/unify/prog0667.ml.out
Characters 50-53:
  "[" ^ (List.map sepConcat ";") ^ "]";;
                            ^^^
Error: This expression has type string but an expression was expected of type
         string list
